<resources>
    <string name="app_name">ChatApp</string>
    <string name="image_sent">image sent</string>
    <string name="file_sent">file sent</string>
    <string name="no_message">No message</string>
    <string name="_1">1</string>
    <string name="user_name">user name</string>
    <string name="sent_file">sent file</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_phone_number">Sign in with phone number</string>
    <string name="welcome">Welcome</string>
    <string name="phonenumber_mask">XX XXX XX XX</string>
    <string name="kodni_olish">Kodni olish</string>
    <string name="tasdiqlash">Tasdiqlash</string>
    <string name="kodni_kiriting">Kodni kiriting</string>
    <string name="default_web_client_id">384095482247-8etvckjl2hgj810uc6jod02kq5lqhd2p.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">Username</string>
</resources>