<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    android:fitsSystemWindows="true"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_40ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/signInWithGoogle_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:id="@+id/google_image"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_toEndOf="@id/google_image"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/signInWithPhoneNumberCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/signInWithGoogle_card">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:id="@+id/phone_image"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/call" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_toEndOf="@id/phone_image"
                android:text="@string/sign_in_with_phone_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <!--    <Button-->
    <!--        android:id="@+id/register_welcome_btn"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="@dimen/_20sdp"-->
    <!--        android:backgroundTint="#5A73F3"-->
    <!--        android:drawableStart="@drawable/google"-->
    <!--        android:text="@string/sign_in_with_google"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <Button-->
    <!--        android:id="@+id/login_welcome_btn_"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="@dimen/_20sdp"-->
    <!--        android:layout_marginTop="@dimen/_10sdp"-->
    <!--        android:backgroundTint="#5A73F3"-->
    <!--        android:text="@string/sign_in_with_phone_number"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/register_welcome_btn" />-->
</androidx.constraintlayout.widget.ConstraintLayout>